# teensycore

./: .gitignore  Cargo.toml  LICENSE  README.md  build-template.sh  build.rs  test.sh
examples/blinky/: main.rs
examples/debug/: main.rs
examples/i2c/: lib.rs
examples/mpu6050/: lib.rs
examples/serial/: main.rs
examples/usb_serial/: lib.rs
src/: clock.rs  debug.rs  fastdivide.rs  gate.rs  i2c.rs  lib.rs  linker.ld  math.rs  mem.rs  phys.rs  prelude.rs  serio.rs  system.rs  teensy.c  usb_serial.rs
src/phys/: addrs.rs  analog.rs  dma.rs  gpio.rs  irq.rs  periodic_timers.rs  pins.rs  timer.rs  uart.rs  usb.rs  usb_desc.rs  xbar.rs
src/phys/usb/: descriptors.rs  models.rs  registers.rs
src/system/: boxed.rs  buffer.rs  closure.rs  map.rs  observable.rs  str.rs  string_builder.rs  strings.rs  vector.rs
