[package]
name = "teensycore"
authors = ["Joshua Cole"]
version = "0.0.2"
license = "MIT"
repository = "https://github.com/SharpCoder/teensycore"
description = "A kernel for the teensy4.0 microcontroller"
keywords = ["kernel", "teensy", "teensy-4", "embedded", "baremetal"]
edition = "2021"
categories = ["embedded", "hardware-support", "no-std"]
crate-type = ["staticlib"]

[profile.release]
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 3
panic = "abort"

[dependencies]

[build-dependencies]
cc = "1.0"