[package]
name = "teensycore"
authors = ["Joshua Cole"]
version = "0.0.5"
license = "MIT"
repository = "https://github.com/SharpCoder/teensycore"
documentation = "https://docs.rs/crate/teensycore/latest"
description = "A kernel for the teensy4.0 microcontroller"
keywords = ["kernel", "teensy", "teensy-4", "embedded", "baremetal"]
edition = "2021"
categories = ["embedded", "hardware-support", "no-std"]
crate-type = ["staticlib"]

[package.metadata.docs.rs]
targets = ["thumbv7em-none-eabi"]

[profile.release]
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 3
panic = "abort"

[dependencies]

[build-dependencies]
cc = "1.0"