[package]
name = "teensycore"
authors = ["Joshua Cole"]
version = "0.0.12"
license = "MIT"
repository = "https://github.com/SharpCoder/teensycore"
documentation = "https://docs.rs/crate/teensycore/latest"
description = "A kernel for the teensy4.0 microcontroller"
keywords = ["kernel", "teensy", "teensy-4", "embedded", "no-std"]
edition = "2021"
categories = ["embedded", "hardware-support", "no-std"]
crate-type = ["staticlib"]

[package.metadata.docs.rs]
targets = ["thumbv7em-none-eabi"]

[features]
testing = []

[dependencies]

[build-dependencies]
cc = "1.0"
